fixing spacing on tablet

--- a/styles/main.css
+++ b/styles/main.css
@@ -1135,14 +1135,13 @@ p {
   padding-top: 5%;
 }
 #branding-page-section p {
-  padding-top: 2%;
   padding-bottom: 2%;
 }
 #branding-column-two-header {
   text-align: left;
+  margin-bottom: 5%;
 }
 #branding-image-one {
-  margin-top: 10%;
   padding-left: 25%;
   padding-right: 25%;
   top: 5%;
@@ -1150,7 +1149,11 @@ p {
 }
 #branding-text-one {
   position: relative;
-  top: 40%;
+  margin-top: -5%;
+}
+#branding-text-two {
+  position: relative;
+  margin-top: -10%;
 }
 #branding-image-two {
   padding-left: 25%;
@@ -1190,7 +1193,7 @@ p {
   color: #E2C8B1;
   position: relative;
   margin-left: 30%;
-  top: -175px;
+  top: -300px;
 }
 #prototyping-bold-text-two {
   color: #E2C8B1;
@@ -1209,14 +1212,14 @@ p {
   padding-left: 10%;
   padding-right: 20%;
   padding-top:5%;
-  top: -170px;
+  margin-top: -45%;
 }
 #prototyping-square-button {
   width: 70%;
   padding-left: 20%;
   padding-right: 10%;
   padding-top:5%;
-  top: -170px;
+  margin-top: -45%;
 }
 #prototyping-light-logo {
   width: 50%;
@@ -3815,16 +3818,21 @@ position: absolute;
     margin-left:40%;
   }
   #branding-page-section {
-    height: 2600px;
+    height: 2200px;
   }
   .branding-text-content {
       font-size: 1.225rem;
       position: relative;
       bottom: 25px;
   }
+  #branding-text-one {
+    position: relative;
+    margin-top: 5%;
+  }
   #branding-image-one {
       padding-left: 25%;
       padding-right: 25%;
+      margin-top:20%;
   }
   .row-third {
       width: 100%;
@@ -3833,12 +3841,9 @@ position: absolute;
   }
   #branding-text-two {
     position: relative;
-    bottom:50px;
+    margin-top: -5%;
   }
-  #branding-text-two {
-    position: relative;
-    bottom:50px;
-  }
+
 
   #prototyping-page-section {
     height: 1800px;
@@ -3848,22 +3853,48 @@ position: absolute;
     font-size: 1.225rem;
   }
 
+  #prototyping-round-button {
+    position: relative;
+    margin-top: -85%;
+  }
+  #prototyping-square-button {
+    position: relative;
+    margin-top: -85%;
+  }
+
   #prototyping-bold-text-one {
     color: #E2C8B1;
     position: relative;
     margin-left: 19%;
-    margin-top: 32%;
+    margin-top: 50%;
   }
   #prototyping-bold-text-two {
     color: #E2C8B1;
     position: relative;
     margin-left: 27%;
-    top: -85%;
+    top: -500%;
+}
+#prototyping-light-logo {
+  position: relative;
+  top: -550%;
+}
+#prototyping-dark-logo {
+  position: relative;
+  top: -550%;
 }
 #prototyping-bold-text-three {
     color: #E2C8B1;
     position: relative;
     margin-left: 15%;
+    top:-400%;
+}
+#prototype-multi-logo {
+  position: relative;
+  top:-75%;
+}
+#prototype-monochrome-logo {
+  position: relative;
+  top:-75%;
 }
 .prototyping-other-row {
     height: 30%;
